@@ -1,0 +1,7 @@
+package org.deftserver.io.callback;
+
+public interface CallbackManagerMXBean {
+
+	int getNumberOfCallbacks();
+	
+}
