@@ -5,6 +5,7 @@ Features
 --------
     - Authentication support (#83)
     - Header names are now case-insensitive (#48)
+    - Generic callbacks in IOLoop (#93)
 
 Configuration
 ------------
